# ds_challenge_olist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  INSIGHTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.cursor/rules/: notebook-to-src.mdc
artifacts/: late_delivery_model.pkl
notebooks/: 01_descriptive_analytics.ipynb  02_delivery_feature_exploration.ipynb  02_model.ipynb
src/: __init__.py  data_loader.py  evaluate.py  features.py  main.py  model.py
tests/: conftest.py  test_model.py
